tests/snapshots/regression-capacitor_booster-fuel_only_skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Caracal
ship/scanStrength                            = 19.200000
ship/passiveShieldEffectiveRechargeRate      = 7.816092
ship/passiveShieldRechargeRate               = 5.666667
ship/shieldEffectiveBoostRate                = 67.126436
ship/shieldBoostRate                         = 48.666667
ship/ehp                                     = 7765.196912
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.137500
ship/armorKineticDamageEffectiveResonance    = 0.187500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 2931.034447
ship/hullEhp                                 = 2611.940233
ship/armorEhp                                = 2222.222232
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/powerFree                               = 775.500000
ship/cpuFree                                 = 487.500000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 100.000000
ship/capacitorPeakDelta                      = 11.704120
ship/capacitorPeakRecharge                   = 11.704120
ship/alignTime                               = 5.238040
ship/hp                                      = 1750.000000
ship/powerOutput                             = 787.500000
ship/powerLoad                               = 12.000000
ship/maxVelocity                             = 287.500000
ship/cpuOutput                               = 537.500000
ship/cpuLoad                                 = 50.000000
ship/rechargeRate                            = 333750.000000
ship/agility                                 = 0.317250
ship/maxTargetRange                          = 71875.000000
ship/scanSpeed                               = 4500.000000
ship/warpCapacitorNeed                       = 0.000000
ship/scanGravimetricStrength                 = 19.200000
ship/shieldCapacity                          = 2125.000000
ship/armorHP                                 = 1500.000000
ship/maxResearchGangSize                     = 30.000000
ship/shieldRechargeRate                      = 937500.000000
ship/capacitorCapacity                       = 1562.500000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = -25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 337.500000
ship/shipBonusCC2                            = 50.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

medium_1/type                     = Medium Ancillary Shield Booster
medium_1/state                    = active
medium_1/capacitorInjectionAmount = 100.000000
medium_1/shieldBoostRate          = 48.666667
medium_1/chargeAmount             = 3.500000
medium_1/cycleTime                = 3000.000000
medium_1/capacitorNeed            = 0.000000
medium_1/heatDamage               = 0.975000
medium_1/charge/type              = Cap Booster 100
