tests/snapshots/regression-capacitor_stable-stable.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Dominix
ship/capacitorStablePercentage               = 80.434849
ship/maxTargetsCharacter                     = 0.000000
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 22.000000
ship/passiveShieldEffectiveRechargeRate      = 10.924138
ship/passiveShieldRechargeRate               = 7.920000
ship/ehp                                     = 37916.398712
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.162500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 10924.137796
ship/hullEhp                                 = 13955.223533
ship/armorEhp                                = 13037.037382
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/powerFree                               = 7995.000000
ship/cpuFree                                 = 485.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 62.997485
ship/capacitorPeakDelta                      = 35.469146
ship/capacitorPeakLoad                       = 20.833333
ship/capacitorPeakRecharge                   = 56.302480
ship/alignTime                               = 17.427593
ship/powerLoad                               = 2005.000000
ship/cpuLoad                                 = 115.000000
ship/rechargeRate                            = 306380.822827
ship/capacitorCapacity                       = 6900.000000
ship/shipBonus2AF                            = 0.000000
ship/shipBonusGC                             = 0.000000
ship/shipBonusCC                             = 0.000000
ship/shipBonusMB                             = 0.000000
ship/shipBonusCB                             = 0.000000
ship/shipBonusAB                             = 0.000000
ship/shipBonusMI                             = 0.000000
ship/shipBonusAI                             = 0.000000
ship/shipBonusCI                             = 0.000000
ship/shipBonusGI                             = 0.000000
ship/shipBonusGB                             = 0.000000
ship/shipBonusGB2                            = 0.000000
ship/shipBonusUF1                            = 0.000000
ship/shipBonusUF2                            = 0.000000
ship/shipBonusUC1                            = 0.000000
ship/shipBonusUC2                            = 0.000000
ship/shipBonusUB1                            = 0.000000
ship/shipBonusUB2                            = 0.000000
ship/shipBonusOreDestroyer1                  = 0.000000
ship/shipBonusOreDestroyer2                  = 0.000000
ship/shipBonusOreDestroyer3                  = 0.000000
ship/shipBonusSoEECS1                        = 0.000000
ship/shipBonusSoEECS2                        = 0.000000
ship/shipBonusSoEECS3                        = 0.000000
ship/shipBonusSoEECS4                        = 0.000000
ship/shipBonusSoEECS5                        = 0.000000
ship/shipBonusAB3                            = 0.000000

outgoing_effect_1/type                  = Heavy Energy Neutralizer I
outgoing_effect_1/effect                = capacitorPeakLoadTaken
outgoing_effect_1/capacitorTransferRate = 20.833333
outgoing_effect_1/maxRange              = 16000.000000
outgoing_effect_1/falloffEffectiveness  = 8000.000000

high_1/type                  = Heavy Energy Neutralizer I
high_1/state                 = active
high_1/capacitorTransferRate = 20.833333
high_1/capacitorPeakLoad     = 20.833333
high_1/cycleTime             = 24000.000000

medium_1-5/type  = Cap Recharger II
medium_1-5/state = online

ship                              = skill Gallente Battleship needs 1 has 0
ship                              = skill Spaceship Command needs 4 has 0
ship                              = skill Gallente Battlecruiser needs 3 has 0
ship                              = skill Gallente Cruiser needs 3 has 0
ship                              = skill Gallente Destroyer needs 3 has 0
ship                              = skill Gallente Frigate needs 3 has 0
high_1/Heavy Energy Neutralizer I = skill Capacitor Emission Systems needs 3 has 0
high_1/Heavy Energy Neutralizer I = skill Power Grid Management needs 3 has 0
high_1/Heavy Energy Neutralizer I = skill Science needs 2 has 0
medium_1/Cap Recharger II         = skill Energy Grid Upgrades needs 3 has 0
medium_1/Cap Recharger II         = skill Power Grid Management needs 2 has 0
medium_1/Cap Recharger II         = skill Science needs 1 has 0
medium_2/Cap Recharger II         = skill Energy Grid Upgrades needs 3 has 0
medium_2/Cap Recharger II         = skill Power Grid Management needs 2 has 0
medium_2/Cap Recharger II         = skill Science needs 1 has 0
medium_3/Cap Recharger II         = skill Energy Grid Upgrades needs 3 has 0
medium_3/Cap Recharger II         = skill Power Grid Management needs 2 has 0
medium_3/Cap Recharger II         = skill Science needs 1 has 0
medium_4/Cap Recharger II         = skill Energy Grid Upgrades needs 3 has 0
medium_4/Cap Recharger II         = skill Power Grid Management needs 2 has 0
medium_4/Cap Recharger II         = skill Science needs 1 has 0
medium_5/Cap Recharger II         = skill Energy Grid Upgrades needs 3 has 0
medium_5/Cap Recharger II         = skill Power Grid Management needs 2 has 0
medium_5/Cap Recharger II         = skill Science needs 1 has 0
